// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addDependenciesToPackageJson Should pass if the file package.json has been updated with the merged dependencies 1`] = `
{
  "/node_modules/vue-3-options-preset/src/stubs/package.json": "{"dependencies":{"@popperjs/core":"^2.11.6","bootstrap":"^5.2.3"},"devDependencies":{"sass":"^1.57.1"}}",
  "/package.json": "{"license":"MIT","dependencies":{"shelljs":"^0.8.5","@popperjs/core":"^2.11.6","bootstrap":"^5.2.3"},"devDependencies":{"jest":"^29.3.1","memfs":"^3.4.12","sass":"^1.57.1"}}",
}
`;

exports[`addDependenciesToPackageJson Should pass if the file package.json has been updated with the merged devDependencies 1`] = `
{
  "/node_modules/vue-3-options-preset/src/stubs/package.json": "{"dependencies":{"@popperjs/core":"^2.11.6","bootstrap":"^5.2.3"},"devDependencies":{"sass":"^1.57.1"}}",
  "/package.json": "{"license":"MIT","dependencies":{"shelljs":"^0.8.5"},"devDependencies":{"jest":"^29.3.1","memfs":"^3.4.12","sass":"^1.57.1"}}",
}
`;
